--- a/index.html
+++ b/index.html
@@ -179,7 +179,12 @@
             </div>
         </div>
         <div class="wrapper">
-            <img src="/img/Subsc.png" alt="">
+                <h1>Subscribe to get the Latest Offer</h1><br>
+                <p>Get our daily updates by subscribing to our newspaper, please drop your email below</p><br>
+                <div>   
+                    <input style="position: absolute; width: 1000px; height: 78px; padding: 20px 20px 20px 20px; border-radius: 150px;" type="text" class="form-control" placeholder="Enter your email addres" aria-label="Username" aria-describedby="addon-wrapping">
+                    <button style="position: absolute; width: 191.1px; height: 58.5px; margin-left: 300px; margin-top: 9px; color: #ffffff; background-color: #FF6838; border: none; border-radius: 150px;" type="button" class="btn btn-warning"> <img src="/img/dfff.png" alt=""> Subscribe</button>
+                </div>
         </div>
         <div class="footer">
             <img style="width: 100%;"  src="/img/Footer.png" alt="">
